# mcp

./: README.md  client.py  client_local.py  client_online.py  debug_mcp.py  debug_output.txt  debug_type.txt  dynamic_push.txt  fastmcp_debug.txt  fastmcp_source.txt  final_git_push.txt  final_push.txt  final_push_v4.txt  git_log.txt  git_log_check.txt  git_status.txt  implementation_plan.md  main.py  mcp_security_source.txt  mcp_sse_source.txt  output.txt  push_fix.txt  push_out.txt  pyproject.toml  routes_debug.txt  server.py
