[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "mcp[client,server]>=1.25.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.1",
    "starlette>=0.50.0",
    "uvicorn>=0.40.0",
]
